# rpi-pico-scaffolding

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: options.cmake
include/: defines.h
include/config/: FreeRTOSConfig.h  arm.h  lwipopts.h  mbedtls_config.h  riscv.h
include/core/gpio/: gpio.h
include/core/logger/: logger.h
lib/SEGGER/: CMakeLists.txt  SEGGER.h  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_ConfDefaults.h  SEGGER_SYSVIEW_Int.h
lib/SEGGER/Config/: Global.h  SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h
lib/SEGGER/FreeRTOSV11/: SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
lib/SEGGER/FreeRTOSV11/Config/Cortex-M/: SEGGER_SYSVIEW_Config_FreeRTOS.c
src/: CMakeLists.txt  main.c  main.cpp
src/core/: CMakeLists.txt
src/core/gpio/: CMakeLists.txt  gpio.c
src/core/logger/: CMakeLists.txt  logger.c
